<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterCarThirdActivity" >
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff" >
     <Button 
            android:id="@+id/userRegisterFirstBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:textColor="#0099FF"
            android:text="@string/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#0099FF"
            android:text="驾驶证验证" />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:height="50dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#0099FF"
            android:text="1/2"/>
    </RelativeLayout>
<LinearLayout 
            android:id="@+id/imagebuttonshow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">
<ImageButton android:id="@+id/carcertificate"
           android:layout_width="130px"
           android:layout_height="130px"
           android:layout_marginLeft="15px"
           android:src="@drawable/car"/>
<ImageButton android:id="@+id/drivercertificate"
           android:layout_width="130px"
           android:layout_height="130px"
           android:layout_marginLeft="30px"
           android:src="@drawable/driver"/>
</LinearLayout>
<TextView android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="10sp"
          android:textColor="#000000"
          android:layout_marginTop="10dp"
          android:layout_marginLeft="15dp"
          android:text="@string/announcement1"
    />
<TextView android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="10sp"
          android:layout_marginLeft="15dp"
          android:textColor="#000000"
          android:text="@string/announcement2"
    />
<TextView android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="15dp"
          android:textColor="#FF0000"
          android:textSize="10sp"
          android:text="@string/announcement3"
    />
<Button android:id="@+id/certificateRegisterBtn"
     android:layout_height="50px"
     android:layout_width="fill_parent"
     android:background="@drawable/button_padding1"
     android:textColor="#ffffff"
     android:gravity="center"
     android:textSize="18sp"
     android:layout_marginTop="30px"
     android:layout_marginLeft="10px"
     android:layout_marginRight="10px"
     android:text="下一步（行驶证验证）"
    />

</LinearLayout>