<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">
        <Button 
            android:id="@+id/carRegisterFirstBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:textColor="#0099FF"
            android:text="@string/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#0099FF"
            android:text="车主注册" />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:height="50dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#0099FF"
            android:text="1/2"/>
    </RelativeLayout>
    <EditText 
        android:id="@+id/carRegisterFirstMobilePhone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="输入手机号码" />
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/userRegisterFirstIdentifyBtn"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:background="@drawable/button_padding1"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:text="获取验证码"/>
        <EditText 
            android:id="@+id/carRegisterFirstIdentifyEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_border"
            android:hint="输入验证码"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <ImageView 
            android:id="@+id/carRegisterFirstAcceptImgBtn"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_checkbox_p"/>
        <Button 
            android:id="@+id/carRegisterFirstAcceptBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:textSize="16sp"
            android:text="已阅读并同意"/>
        <Button 
            android:id="@+id/carRegisterFirstProtocolBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:textSize="16sp"
            android:text="用户协议及隐私政策"/>
    </LinearLayout>
    <Button 
        android:id="@+id/carRegisterFirstNextBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_radius3"
        android:text="@string/next"
        android:textColor="#ffffff"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="14sp"
        android:text="已有爱拼车账号"/>
    <Button 
        android:id="@+id/carRegisterFirstLoginBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_style2"
        android:layout_marginTop="20dp"
        android:text="@string/login"/>

</LinearLayout>
